crates/credential/tests/probes/scheme_sensitivity_external_with_secret.stderr
error: field `secret` on #[auth_scheme(external)] struct cannot be SecretString — external schemes hold only a handle to an out-of-process signer, no secret bytes in memory; declare #[auth_scheme(sensitive)] if it holds a secret (per Tech Spec §15.5)
  --> tests/probes/scheme_sensitivity_external_with_secret.rs:14:5
   |
14 |     pub secret: SecretString, // SecretString on external-tagged scheme — REJECT
   |     ^^^
